2005-11-19  Richard Hult  <richard@imendio.com>

	* src/bacon-message-connection.c: Update.

	* src/dh-main.c: Use present_with_time and remove the separate
	raise command.

	* src/dh-parser.c: (parser_start_node_cb): Parse the new keyword
	tag.
	
	* src/dh-search.c: Remove old cruft.

2005-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:	Allow compilation against xulrunner.
	Patch by Robert O'Callahan <rocallahan@novell.com>.

2005-10-05  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c: 
	* src/dh-window.c: Make the window title be the book title + the
	html title. Fixes bug #313239.

2005-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c (parser_start_node_cb): Strip out struct, union
	and enum from names, and also remove "()" from functions, fixes
	bug #108295.

2005-10-02  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Add commandhandler includes.

	* src/dh-gecko-utils.cpp:
	* src/dh-html.c: (dh_html_copy_selection):
	* src/dh-window.c: (window_activate_copy):
	* ui/window.ui: Add copy command and hook up in the UI, bug
	#120522.

2005-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-gecko-utils.cpp (dh_gecko_utils_get_mouse_event_button):
	Clean up.
	
	(dh_gecko_utils_get_mouse_event_modifiers): Add to get the
	modifier keys for the mouse event.

	* src/dh-html.c (html_mouse_click_cb): Ctrl-click opens in new tab.

	* src/dh-gecko-utils.cpp (dh_gecko_utils_get_mouse_event_button):
	Use the right integer type when getting the button, and remove the
	PPC hack, that most most likely caused by endian problems before.

2005-10-02  Mikael Hallendal  <micke@imendio.com>

	* src/dh-window.c: (window_open_new_tab):
	- Select the new tab so you can start using it directly.

2005-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_key_press_event_cb): Escape minimizes,
	not higgy but very convenient when using as a complent to
	Emacs/vim.
